[workspace]

members = [
    "websub",
    "websub-cli",
    "functions/websub-add-subscription",
    "functions/websub-challenge-response",
    "functions/websub-notify",
    "functions/websub-renew",
    "functions/websub-subscribe",
    "functions/websub-webhook",
    "functions/websub-youtube",


]