[package]
name = "websub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
aws-config = "0.13.0"
aws-sdk-dynamodb = "0.13.0"
eyre = "0.6.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_dynamo = { version = "4.0.2", features = ["aws-sdk-dynamodb+0_13", "aws-sdk-dynamodbstreams+0_13"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
