[package]
name = "websub-subscribe"
version = "0.1.0"
edition = "2021"


# Use cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to manage dependencies.
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.6.1", default-features = false, features = ["dynamodb"] }
lambda_runtime = "0.5.1"
reqwest = "0.11.11"
serde_dynamo = { version = "4.0.2", features = ["aws-sdk-dynamodbstreams+0_13", "aws_lambda_events+0_6"] }
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter"] }
websub = { version = "0.1.0", path = "../../websub" }


